infra/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alive-order-post-deployment
  namespace: backend
  labels:
    app: alive-order-post
spec:
  replicas: 10   # 주문 API보다 적게 시작
  selector:
    matchLabels:
      app: alive-order-post
  template:
    metadata:
      labels:
        app: alive-order-post
    spec:
      serviceAccountName: backend-secrets-sa

      nodeSelector:
        karpenter.sh/nodepool: default

      topologySpreadConstraints:
        - maxSkew: 2
          topologyKey: "topology.kubernetes.io/zone"
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: alive-order-post

      containers:
      - name: backend-container
        # image: 877009927021.dkr.ecr.ap-northeast-2.amazonaws.com/al7/ci-jenkins:v90
        image: frozzun99/alive-eks:latest
        imagePullPolicy: Always

        resources:
          requests:
            cpu: "1000m"      # 최소 반 개 코어는 확보 (기존 300m에서 상향)
            memory: "1Gi"   # 앱 기본 안정성을 위해 (기존 256Mi에서 상향)
          limits:
            cpu: "2000m"     # 6,000 TPS 피크 시 2코어까지 '버스트' 허용 (가장 중요!)
            memory: "2Gi"

        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/mnt/secrets"
          readOnly: true

      volumes:
      - name: secrets-store-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "alive-valkey-spc"

      imagePullSecrets:
      - name: ecr-registry-key
