infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alive-deployment
  namespace: backend
  labels:
    app: alive-app
spec:
  replicas: 6
  selector:
    matchLabels:
      app: alive-app    
  template:
    metadata:
      labels:
        app: alive-app  
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "topology.kubernetes.io/zone"
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: alive-app
      containers:
      - name: backend-container
        image: 877009927021.dkr.ecr.ap-northeast-2.amazonaws.com/al7/ci-jenkins:v22
        imagePullPolicy: Always 
        ports:
        - containerPort: 8080 
        
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 3

        resources:
          requests:
            cpu: "200m"
            memory: "400Mi" 
          limits:
            cpu: "500m"
            memory: "768Mi"
      imagePullSecrets:
      - name: ecr-registry-key
