infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alive-service
spec:
  type: ClusterIP
  selector:
    app: alive-app
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 8080
